<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/action_accept"
        android:visible="false"
        android:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_delete"

        android:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_birthdays"
        android:icon="@drawable/ic_action_cc_bcc"
        android:title="@string/action_birthdays"
        android:showAsAction="ifRoom"/>
</menu>