<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/titleET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_between_lines"
        android:hint="@string/title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/descrET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleET"
        android:layout_marginTop="@dimen/margin_between_lines"
        android:hint="@string/descr"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descrET"
        android:layout_marginTop="@dimen/margin_between_lines"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setDateLabel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:clickable="true"
            android:drawablePadding="@dimen/margin_small"
            android:gravity="center"
            android:drawableRight="@drawable/calendar"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <ImageButton
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:src="@drawable/calendar"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateLayout"
        android:layout_marginTop="@dimen/margin_between_lines"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setTimeLabel"

            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:clickable="true"
            android:drawablePadding="@dimen/margin_small"
            android:gravity="center"
            android:drawableRight="@drawable/clock"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <ImageButton
            android:id="@+id/timeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_small"
            android:background="@android:color/transparent"
            android:src="@drawable/clock"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/remindTimeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeLayout"
        android:layout_marginTop="@dimen/margin_between_lines"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/remingTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remindTimeLabel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <Spinner
            android:id="@+id/remindTimeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remindTimeLayout"
        android:layout_marginTop="@dimen/margin_between_lines"
        android:text="@string/checkbox"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />



</RelativeLayout>
</ScrollView>